--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,6 @@
 .gradle
-/build/
+build/
 !gradle/wrapper/gradle-wrapper.jar
-
-### STS ###
-.apt_generated
-.classpath
-.factorypath
-.project
-.settings
-.springBeans
-.sts4-cache
 
 ### IntelliJ IDEA ###
 .idea
@@ -18,10 +9,7 @@
 *.ipr
 /out/
 
-### NetBeans ###
-/nbproject/private/
-/build/
-/nbbuild/
-/dist/
-/nbdist/
-/.nb-gradle/
+.vscode/
+*.classpath
+.project
+.settings
