--- a/by_code/build.gradle
+++ b/by_code/build.gradle
@@ -1,19 +1,19 @@
 buildscript {
-	ext {
-		springBootVersion = '2.0.1.RELEASE'
+    ext {
+        springBootVersion = '2.0.1.RELEASE'
         testDataBuilderVersion = '0.5.0'
-	}
-	repositories {
+    }
+    repositories {
         jcenter()
         mavenCentral()
         maven { url 'https://repo.spring.io/snapshot' }
         maven { url 'https://repo.spring.io/milestone' }
         maven { url "https://repo.spring.io/release" }
-	}
-	dependencies {
-		classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
+    }
+    dependencies {
+        classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
         classpath group: 'com.github.hippoom', name: 'test-data-builder', version: testDataBuilderVersion
-	}
+    }
 }
 
 apply plugin: 'java'
@@ -36,19 +36,17 @@ repositories {
 
 
 ext {
-	springCloudVersion = 'Finchley.RC1'
+    springCloudVersion = 'Finchley.RC1'
 }
 
 dependencies {
-	compile('org.springframework.boot:spring-boot-starter')
-	compile('org.springframework.cloud:spring-cloud-starter-contract-stub-runner')
-	testCompile('org.springframework.boot:spring-boot-starter-test')
-	testCompile('org.springframework.cloud:spring-cloud-starter-contract-stub-runner')
-    testCompile group: 'com.github.hippoom', name: 'test-data-builder', version: testDataBuilderVersion
+    compile('org.springframework.boot:spring-boot-starter')
+    compile('org.springframework.cloud:spring-cloud-starter-contract-stub-runner')
+    runtime("com.github.hippoom:test-data-builder:${testDataBuilderVersion}")
 }
 
 dependencyManagement {
-	imports {
-		mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
-	}
+    imports {
+        mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
+    }
 }
